<resources>
    <string name="app_name">NPOD</string>
    <string name="image_description">Picture of the day</string>
    <string name="search">Поиск</string>
    <string name="wiki_search">Поиск в википедии</string>
    <string name="watch">Перейти к просмотру</string>
    <string name="video_content">В ответе содержится сслыка на видео</string>
    <string name="home">Главная</string>
    <string name="search_field_is_empty">Пожалуйста, заполните поле</string>
    <string name="the_day_before_yesterday">Позавчерашняя</string>
    <string name="yesterday">Вчерашняя</string>
    <string name="today">Сегодняшняя</string>
    <string name="settings">Настройки</string>
    <string name="select_theme">Выберите тему приложения</string>
    <string name="default_theme">Стандартная тема</string>
    <string name="mars_theme">Тема \"Марс\"</string>
    <string name="dark_theme">Темная тема</string>
    <string name="save">Сохранить</string>
    <string name="skip">Пропустить</string>
    <string name="hello">Привет!</string>
    <string name="go">Поехали</string>
    <string name="in_this_app">В этом приложении ты увидишь…</string>
    <string name="earth_photos">Фотографии Земли с орбиты</string>
    <string name="mars_photos">И фото Марса</string>
    <string name="interesting">Интересно? Тогда вперед!</string>
    <string name="photos">Фотографии</string>
    <string name="photos_mars">Фото Марса</string>
    <string name="photos_other">Другие</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="wiki_search_helper">Поищите незнакомые термины в википедии</string>
    <string name="nasa_info">НАСА</string>
    <string name="notes">Заметки</string>
    <string name="note_title">Заголовок</string>
    <string name="note_description">Описание</string>
    <string name="note_saved">Заметка успешно сохранена</string>
    <string name="notes_list_is_empty">Вы еще не добавили ни одной заметки</string>
    <string name="note_deleted">Заметка удалена</string>
</resources>