<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/BaseTextStyle.DefaultTextStyle"
        android:id="@+id/themes_label"
        android:text="@string/select_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/themes_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_start_margin"
        android:layout_marginTop="@dimen/common_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themes_label">

        <RadioButton
            style="@style/DefaultViewStyle.RadioButtonStyle"
            android:id="@+id/rb_theme_default"
            android:text="@string/default_theme"
            android:textColor="?attr/appTextColor"/>

        <RadioButton
            style="@style/DefaultViewStyle.RadioButtonStyle"
            android:id="@+id/rb_theme_mars"
            android:text="@string/mars_theme"
            android:textColor="?attr/appTextColor"/>

        <RadioButton
            style="@style/DefaultViewStyle.RadioButtonStyle"
            android:id="@+id/rb_theme_dark"
            android:text="@string/dark_theme"
            android:textColor="?attr/appTextColor"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_top_margin"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themes_radio_group"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>