<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/fragment_main_wiki_scene"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_wiki_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/wiki_margin"
                android:src="@drawable/ic_wikipedia"
                android:visibility="visible"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/til_wiki_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/wiki_margin"
                android:hint="@string/wiki_search"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_search_24"
                app:helperTextEnabled="true"
                app:helperText="@string/wiki_search_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_wiki_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_wiki_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"/>

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_main_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motion_layout"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_before_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_day_before_yesterday"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesterday"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            style="@style/BaseTextStyle.BottomSheetTextStyle.TitleStyle"
            android:id="@+id/tv_pod_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_of_the_day"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_main_margin"
            android:contentDescription="@string/image_description"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pod_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/video_content_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_main_margin"
            android:layout_marginEnd="@dimen/fragment_main_margin"
            android:layout_marginTop="@dimen/fragment_main_margin"
            android:text="@string/video_content"
            android:textSize="@dimen/video_content_label_text_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group"
            app:layout_constraintEnd_toStartOf="@id/btn_video_watch"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btn_video_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_main_margin"
            android:text="@string/watch"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/video_content_label"
            app:layout_constraintTop_toTopOf="@id/video_content_label"
            app:layout_constraintBottom_toBottomOf="@id/video_content_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            style="@style/DefaultViewStyle.ProgressBarStyle"
            android:id="@+id/progress"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottom_sheet"
        layout="@layout/bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>